02-IB-IBX-VPN-VPC-stack.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "AWS CloudFormation template for IBC VPN VPC",
	"Parameters": {
	  "IBCVPNCIDR": {
		"Type": "String",
		"Description": "Enter VPC CIDR Block",
		"Default": "10.100.2.0/23"
	  },
	  "AvailabilityZone1": {
		"Description": "select the Availability Zone for your Deployment",
		"Type": "AWS::EC2::AvailabilityZone::Name",
		"Default": "us-east-1a"
	  },
	  "PublicSubnet1": {
		"Type": "String",
		"Description": "Enter Public Subnet-1 CIDR Block",
		"Default": "10.100.2.0/26"
	  },
	  "PublicSubnet2": {
		"Type": "String",
		"Description": "Enter Public Subnet-2 CIDR Block",
		"Default": "10.100.2.128/26"
	  },
	  "PrivateSubnet1": {
		"Type": "String",
		"Description": "Enter Private Subnet-1 CIDR Block",
		"Default": "10.100.2.64/26"
	  },
	  "Environment": {
		"Type": "String",
		"Description": "what is the environment? DEV,SIT,UAT,PREPROD,PROD or DR?",
		"Default": "cns"
	  },
	  "ProjectName": {
		"Type": "String",
		"Description": "Project Name",
		"Default": "ibc"
	  }
	},
	"Resources": {
	  "VPC02": {
		"Type": "AWS::EC2::VPC",
		"Properties": {
		  "CidrBlock": {
			"Ref": "IBCVPNCIDR"
		  },
		  "EnableDnsSupport": "true",
		  "EnableDnsHostnames": "true",
		  "InstanceTenancy": "default",
		  "Tags": [{
			  "Key": "Name",
			  "Value": {
				"Fn::Join": ["-", ["vpc", {
				  "Ref": "ProjectName"
				}, {
				  "Ref": "Environment"
				}, "ibxvpn-01"]]
			  }
			},
			{
			  "Key": "Environment",
			  "Value": {
				"Ref": "Environment"
			  }
			}
		  ]
		}
	  },
	  "IGW01": {
		"Type": "AWS::EC2::InternetGateway",
		"Properties": {
		  "Tags": [{
			  "Key": "Name",
			  "Value": {
				"Fn::Join": ["-", ["igw", {
				  "Ref": "ProjectName"
				}, {
				  "Ref": "Environment"
				}, "ibxvpn-01"]]
			  }
			},
			{
			  "Key": "Environment",
			  "Value": {
				"Ref": "Environment"
			  }
			}
		  ]
		}
	  },
	  "IGWAttach01": {
		"Type": "AWS::EC2::VPCGatewayAttachment",
		"Properties": {
		  "VpcId": {
			"Ref": "VPC02"
		  },
		  "InternetGatewayId": {
			"Ref": "IGW01"
		  }
		}
	  },
	  "PublicSubnet01": {
		"Type": "AWS::EC2::Subnet",
		"Properties": {
		  "VpcId": {
			"Ref": "VPC02"
		  },
		  "CidrBlock": {
			"Ref": "PublicSubnet1"
		  },
		  "AvailabilityZone": {
			"Ref": "AvailabilityZone1"
		  },
		  "Tags": [{
			  "Key": "Name",
			  "Value": {
				"Fn::Join": ["-", ["snet", {
				  "Ref": "ProjectName"
				}, {
				  "Ref": "Environment"
				}, "pub-ibxvpn-01"]]
			  }
			},
			{
			  "Key": "Environment",
			  "Value": {
				"Ref": "Environment"
			  }
			}
		  ]
		}
	  },
	  "PublicSubnet02": {
		"Type": "AWS::EC2::Subnet",
		"Properties": {
		  "VpcId": {
			"Ref": "VPC02"
		  },
		  "CidrBlock": {
			"Ref": "PublicSubnet2"
		  },
		  "AvailabilityZone": {
			"Ref": "AvailabilityZone1"
		  },
		  "Tags": [{
			  "Key": "Name",
			  "Value": {
				"Fn::Join": ["-", ["snet", {
				  "Ref": "ProjectName"
				}, {
				  "Ref": "Environment"
				}, "pub-ibxvpn-02"]]
			  }
			},
			{
			  "Key": "Environment",
			  "Value": {
				"Ref": "Environment"
			  }
			}
		  ]
		}
	  },
	  "PrivateSubnet01": {
		"Type": "AWS::EC2::Subnet",
		"Properties": {
		  "VpcId": {
			"Ref": "VPC02"
		  },
		  "CidrBlock": {
			"Ref": "PrivateSubnet1"
		  },
		  "AvailabilityZone": {
			"Ref": "AvailabilityZone1"
		  },
		  "Tags": [{
			  "Key": "Name",
			  "Value": {
				"Fn::Join": ["-", ["snet", {
				  "Ref": "ProjectName"
				}, {
				  "Ref": "Environment"
				}, "pvt-ibxvpn-01"]]
			  }
			},
			{
			  "Key": "Environment",
			  "Value": {
				"Ref": "Environment"
			  }
			}
		  ]
		}
	  },
	  "PubSubRT01": {
		"Type": "AWS::EC2::RouteTable",
		"Properties": {
		  "VpcId": {
			"Ref": "VPC02"
		  },
		  "Tags": [{
			  "Key": "Name",
			  "Value": {
				"Fn::Join": ["-", ["rtg-snet", {
				  "Ref": "ProjectName"
				}, {
				  "Ref": "Environment"
				}, "pub-ibxvpn-01"]]
			  }
			},
			{
			  "Key": "Environment",
			  "Value": {
				"Ref": "Environment"
			  }
			}
		  ]
		}
	  },
	  "PriSubRT01": {
		"Type": "AWS::EC2::RouteTable",
		"Properties": {
		  "VpcId": {
			"Ref": "VPC02"
		  },
		  "Tags": [{
			  "Key": "Name",
			  "Value": {
				"Fn::Join": ["-", ["rtg-snet", {
				  "Ref": "ProjectName"
				}, {
				  "Ref": "Environment"
				}, "pvt-ibxvpn-01"]]
			  }
			},
			{
			  "Key": "Environment",
			  "Value": {
				"Ref": "Environment"
			  }
			}
		  ]
		}
	  },
	  "PubSubRoute01": {
		"Type": "AWS::EC2::Route",
		"DependsOn": "IGWAttach01",
		"Properties": {
		  "RouteTableId": {
			"Ref": "PubSubRT01"
		  },
		  "DestinationCidrBlock": "0.0.0.0/0",
		  "GatewayId": {
			"Ref": "IGW01"
		  }
		}
	  },
	  "PubSubRTAss01": {
		"Type": "AWS::EC2::SubnetRouteTableAssociation",
		"Properties": {
		  "SubnetId": {
			"Ref": "PublicSubnet01"
		  },
		  "RouteTableId": {
			"Ref": "PubSubRT01"
		  }
		}
	  },
	  "PubSubRTAss02": {
		"Type": "AWS::EC2::SubnetRouteTableAssociation",
		"Properties": {
		  "SubnetId": {
			"Ref": "PublicSubnet02"
		  },
		  "RouteTableId": {
			"Ref": "PubSubRT01"
		  }
		}
	  },
	  "PriSubRTAss01": {
		"Type": "AWS::EC2::SubnetRouteTableAssociation",
		"Properties": {
		  "SubnetId": {
			"Ref": "PrivateSubnet01"
		  },
		  "RouteTableId": {
			"Ref": "PriSubRT01"
		  }
		}
	  },
	  "PrvSubRoute01": {
		"Type": "AWS::EC2::Route",
		"Properties": {
		  "RouteTableId": {
			"Ref": "PriSubRT01"
		  },
		  "DestinationCidrBlock": "0.0.0.0/0",
		  "NatGatewayId": {
			"Ref": "NatGW01"
		  }
		}
	  },
	  "NatGW01": {
		"Type": "AWS::EC2::NatGateway",
		"Properties": {
		  "AllocationId": {
			"Fn::GetAtt": [
			  "NatEIP",
			  "AllocationId"
			]
		  },
		  "SubnetId": {
			"Ref": "PublicSubnet01"
		  },
		  "Tags": [{
			  "Key": "Name",
			  "Value": {
				"Fn::Join": ["-", ["nat", {
				  "Ref": "ProjectName"
				}, {
				  "Ref": "Environment"
				}, "ibxvpn-01"]]
			  }
			},
			{
			  "Key": "Environment",
			  "Value": {
				"Ref": "Environment"
			  }
			}
		  ]
		}
	  },
	  "NatEIP": {
		"Type": "AWS::EC2::EIP",
		"Properties": {
		  "Domain": "vpc",
		  "Tags": [{
			  "Key": "Name",
			  "Value": {
				"Fn::Join": ["-", ["eip-nat", {
				  "Ref": "ProjectName"
				}, {
				  "Ref": "Environment"
				}, "ibxvpn-01"]]
			  }
			},
			{
			  "Key": "Environment",
			  "Value": {
				"Ref": "Environment"
			  }
			}
		  ]
		}
	  }
	}
}
